ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rollouts-demo
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  tls:
    - hosts:
        - '*.argocd-qualification.decathlon.io'
      secretName: wildcard-decathlon-io
  rules:
  - host: rollouts-demo.argocd-qualification.decathlon.io
    http:
      paths:
      - path: /
        backend:
          serviceName: rollouts-demo
          servicePort: 80
